--- a/style.css
+++ b/style.css
@@ -155,6 +155,12 @@ p {
     .dress img {
         height: 40px;
     }
+    #slid img {
+        border-radius: 10px;
+        width: 1085px;
+        height: 360px;
+        object-fit: cover;
+    }
 }
 
 @media screen and (max-width: 730px) {
@@ -182,9 +188,24 @@ p {
         margin-left: 2px;
         margin-right: 2px;
     }
+    #jackets{
+        width: 310px;
+        height: 80px;
+        margin: 5px;
+    }
+    #jackets img{
+       height: 70px;
+       margin-left: 20px;
+    }
     .img1 {
         display: flex;
         align-items: center;
+    }
+    #slid img {
+        border-radius: 10px;
+        width: 705px;
+        height: 250px;
+        object-fit: cover;
     }
 
 }
@@ -195,8 +216,8 @@ p {
     }
     #slid img {
         border-radius: 10px;
-        width: 395px;
-        height: 150px;
+        width: 585px;
+        height: 180px;
         object-fit: cover;
     }
 }
@@ -226,30 +247,50 @@ p {
     .serch {
         margin: 10px;
     }
+    #slid img {
+        border-radius: 10px;
+        width: 493px;
+        height: 180px;
+        object-fit: cover;
+    }
 }
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:413px) {
     .icone img {
         width: 140px;
         margin-left: -40px;
         margin-top: 10px
     }
-
-    /* #section2{
-        display: none;
-    } */
     .parts p {
         font-size: 19px;
     }
-
-    /* .slide img{
-       width: 350px;
-       height: 200px;
-    } */
+    #slid img {
+        border-radius: 10px;
+        width: 355px;
+        height: 150px;
+        object-fit: cover;
+    }
 
 }
+@media screen and (max-width: 430px) {
+    #slid img {
+        border-radius: 11px;
+        width: 410px;
+        height: 150px;
+        object-fit: cover;
+    }
+}
+@media screen and (max-width: 390px) {
+    #slid img {
+        border-radius: 10px;
+        width: 370px;
+        height: 150px;
+        object-fit: cover;
+    }
+}
 
-@media screen and (max-width: 350px) {
+
+@media screen and (max-width: 375px) {
     .icone img {
         width: 140px;
         margin: 5px;
@@ -269,10 +310,20 @@ p {
         font-size: 15px;
     }
 
-    /* .dress img{
-        height: 100px;
-        width: 100px;
-    } */
+    #slid img {
+        border-radius: 11px;
+        width: 355px;
+        height: 150px;
+        object-fit: cover;
+    }
+}
+@media screen and (max-width: 360px) {
+    #slid img {
+        border-radius: 11px;
+        width: 340px;
+        height: 150px;
+        object-fit: cover;
+    }
 }
 
 #bar {
