--- a/style.css
+++ b/style.css
@@ -71,7 +71,9 @@ p {
 
 .main1 {
     background-color: rgb(73, 67, 67);
-    margin-bottom: 100px;
+padding: 10px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
 }
 
 .bar i {
@@ -87,24 +89,16 @@ p {
 }
 
 .bar_search {
-    margin: 20px;
+    margin: 10px;
     border-radius: 8px;
     border: 2px solid black;
     background-color: white;
 }
-
 .bar_search input {
-    padding: 10px;
+    padding: 5px;
     font-size: 15px;
     border: none;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border: 1px solid white;
-}
-
-.bar_search i {
-    margin: 5px;
-    font-size: 20px;
+    border-radius: 10px;
 }
 
 .flex_bar {
@@ -172,41 +166,33 @@ p {
     }
 
 }
-
 @media screen and (max-width: 730px) {
     #Seller {
         display: none;
     }
-
     #section2 {
         display: none;
     }
-
     #Become {
         display: none;
     }
-
     #dots {
         display: none;
     }
-
     #produts_lists {
         display: inline;
     }
-
     #cart1 img {
         width: 195px;
         height: 90px;
         margin-left: 2px;
         margin-right: 2px;
     }
-
     #jackets {
         width: 310px;
         height: 80px;
         margin: 5px;
     }
-
     #jackets img {
         height: 70px;
         margin-left: 20px;
@@ -282,26 +268,6 @@ p {
     }
 }
 
-@media screen and (max-width:413px) {
-    .icone img {
-        width: 140px;
-        margin-left: -40px;
-        margin-top: 10px
-    }
-
-    .parts p {
-        font-size: 19px;
-    }
-
-    #slid img {
-        border-radius: 10px;
-        width: 355px;
-        height: 150px;
-        object-fit: cover;
-    }
-
-}
-
 @media screen and (max-width: 430px) {
     #slid img {
         border-radius: 11px;
@@ -309,6 +275,45 @@ p {
         height: 150px;
         object-fit: cover;
     }
+    #cart1 img {     
+        height: 60px;
+        width: 136px;
+        height: 95px;
+        border-radius: 7px;
+        margin-left: 2px;
+        margin-right: 2px;
+    }
+    #number_1{
+        width: 120px;
+       }
+}
+
+@media screen and (max-width:414px) {
+    .icone img {
+        width: 140px;
+        margin-left: -40px;
+        margin-top: 10px
+    }
+    .parts p {
+        font-size: 19px;
+    }
+    #slid img {
+        border-radius: 10px;
+        width: 393px;
+        height: 150px;
+        object-fit: cover;
+    }
+    #cart1 img {     
+        height: 60px;
+        width: 130px;
+        height: 95px;
+        border-radius: 7px;
+        margin-left: 2px;
+        margin-right: 2px;
+    }
+    #number_1{
+        width: 155px;
+       }
 }
 
 @media screen and (max-width: 390px) {
@@ -318,13 +323,18 @@ p {
         height: 150px;
         object-fit: cover;
     }
-    #cart1 img {
-        width: 185px;
+    #cart1 img {     
+        height: 60px;
+        width: 117px;
         height: 95px;
         border-radius: 7px;
         margin-left: 2px;
         margin-right: 2px;
     }
+    #number_1{
+        width: 140px;
+       }
+
 }
 
 @media screen and (max-width: 387px) {
@@ -368,8 +378,8 @@ p {
         object-fit: cover;
     }
     #cart1 img {
-        width: 174px;
-        height: 95px;
+        width: 105px;
+        height: 65px;
         border-radius: 7px;
         margin-left: 2px;
         margin-right: 2px;
@@ -390,6 +400,7 @@ p {
         margin-left: 2px;
         margin-right: 2px;
     }
+
 }
 
 #bar {
@@ -522,4 +533,14 @@ header {
     padding: 10px;
     margin: 10px;
     border: 2px solid rgb(194, 183, 183);
+}
+/* slider_type imeges */
+
+.slider_type{
+    padding: 10px;
+}
+
+.slider_type img{
+    width: 100%;
+height: auto;
 }
