--- a/style.css
+++ b/style.css
@@ -174,10 +174,6 @@ p {
     #box_3 {
         display: none;
     }
-    #next_slide img{
-        width:100% ;
-        height: 200px;
-    }
 
 }
 
@@ -248,10 +244,6 @@ p {
 @media screen and (max-width: 630px) {
     .serch_12 {
         display: none;
-    }
-    #next_slide img{
-        width:100% ;
-        height: 180px;
     }
     #slid img {
         border-radius: 10px;
@@ -619,11 +611,10 @@ header {
     height: 500px;
     width: 400px;
 }
-.next_slide img{
-    width:100% ;
-    height: 300px;
-}
-
 .One_img_bg img:hover {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.flexity{
+    background-color: rgb(48, 44, 44);
+    color: white;
 }
