--- a/style.css
+++ b/style.css
@@ -233,6 +233,10 @@ p {
     #mouse h2 {
         font-size: 15px;
     }
+    /* there are part off margen bottem */
+#margen_bottem{
+    margin-bottom: 50px;
+}
 }
 
 @media screen and (max-width: 730px) {
@@ -420,7 +424,6 @@ p {
     }
     #mouse {
         width: 120px;
-        height: 140px;
         padding: 5px;
         margin: 5px;
         text-align: center;
@@ -471,7 +474,6 @@ p {
     }
     #mouse {
         width: 115px;
-        height: 140px;
         padding: 5px;
         margin: 5px;
         text-align: center;
@@ -589,7 +591,6 @@ p {
         height: 150px;
         object-fit: cover;
     }
-
     #cart1 img {
         width: 112px;
         height: 95px;
@@ -915,3 +916,9 @@ header {
     border-radius: 10px;
     box-shadow: rgba(20, 20, 20, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
+
+/* there are part off margen bottem */
+#margen_bottem{
+    margin-bottom: 50px;
+}
+
